Add content and postloadjs block in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,13 @@
 
         </div>
     {% endif %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
+
 </body>
 
 </html>
