--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">Wearable Tech</h1>
+                <h1 class="display-4 logo-font text-white-uppercase">Wearable Tech</h1>
             </div>
         </div>
     </div>
