--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,5 +6,10 @@ body{
     background: url('/media/home2.jpeg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    font-family: 'Open Sans';
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.text-white-uppercase {
+    text-transform: uppercase;
+    color : white;
 }
