Add logo on header of home page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,3 +13,13 @@ body{
     text-transform: uppercase;
     color : white;
 }
+
+.logo-font {
+    font-family: 'Dancing Script', cursive;
+    color: white;
+    font-size: 50px;
+}
+
+.links {
+text-decoration: none;
+}
