--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     {% endblock %}
@@ -58,7 +59,6 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 
             </div>
-
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 
             </div>
@@ -81,5 +81,43 @@
     {% endblock %}
 
 </body>
+
+<footer>
+<div class="row">
+<div class="col-lg-4 col-md-4 text-center">
+<p class="text-white-uppercase lead">+1 123456789</p> 
+</div>
+
+<div class="col-lg-4 col-md-4 text-center">
+<p class="text-white-uppercase lead">FREE HOME DELIVERY ON ORDERS
+OVER XX</p> 
+</div>
+
+<div class="col-lg-4 col-md-4 text-center">
+<p class="text-white-uppercase lead">FREE RETURNS</p> 
+</div>
+
+</div>
+
+<div class="row social-links">
+    <div class="col  text-center social-links">
+            <a href="" target="_blank"
+              ><i class="fab fa-facebook-f"></i>
+
+</a>
+            <a
+              href=""
+              target="_blank"
+              ><i class="fab fa-pinterest"></i>
+
+</a>
+
+  <span class="copyright"> © 2021 Copyright <strong> José Querales</strong
+          > . All rights reserved. </span>
+
+    </div>
+</div>
+
+</footer>
 
 </html>
