--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,6 @@
 
     <title>Wearable Tech {% block extra_title %}{% endblock %}</title>
 </head>
-
 <body>
     <header class="container-fluid fixed-top">
 
@@ -72,45 +71,45 @@
                 </form>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                 
-                 {% if request.user.is_authenticated %}
-                      {% if request.user.is_superuser %}
-                          <li class="list-inline-item"></li>
-                                   <span class="shopping-basket-icon"><a href="" class="links nav-bar-links">Product Management</a></span> 
-                      {% endif %}
+
+                    {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
+                    <li class="list-inline-item"></li>
+                    <span class="shopping-basket-icon"><a href="" class="links nav-bar-links">Product
+                            Management</a></span>
+                    {% endif %}
                     <li class="list-inline-item">
-                     <span class="shopping-basket-icon">
-                        <a href="{% url 'account_logout' %}" class="links nav-bar-links"> Logout </a> 
+                        <span class="shopping-basket-icon">
+                            <a href="{% url 'account_logout' %}" class="links nav-bar-links"> Logout </a>
                         </span>
                     </li>
                     {% else %}
-                          <li class="list-inline-item">
+                    <li class="list-inline-item">
                         <span class="shopping-basket-icon">
-                        <a href="{% url 'account_login' %}" class="links nav-bar-links"> Login </a> 
+                            <a href="{% url 'account_login' %}" class="links nav-bar-links"> Login </a>
                         </span>
                     </li>
 
-                    
+
 
 
                     <li class="list-inline-item">
                         <span class="shopping-basket-icon">
-                        <a href="{% url 'account_signup' %}" class="links nav-bar-links"> Register </a> 
+                            <a href="{% url 'account_signup' %}" class="links nav-bar-links"> Register </a>
                         </span>
                     </li>
 
-                 {% endif %}
+                    {% endif %}
 
                     <li class="list-inline-item">
                         <span class="shopping-basket-icon">
-                        <i class="fas fa-shopping-basket"></i>
+                            <i class="fas fa-shopping-basket"></i>
                         </span>
                     </li>
                 </ul>
-            
-                
+
+
 
             </div>
 
