--- a/static/css/base.css
+++ b/static/css/base.css
@@ -106,3 +106,10 @@ text-decoration: none;
     font-size: 30px;
     color: #f05f40;
 }
+
+.nav-bar-links:hover,
+.nav-bar-links:active,
+.nav-bar-links:focus
+.nav-bar-links:active:focus:visited{
+  color: #d3b3ac;
+}
