--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="main-section-page">
                 <h1 class="display-4 text-white-uppercase">We provide Smart Control Solutions</h1>
                 <p class="lead text-white-uppercase">
                     <a class="btn btn-primary btn-main-sections" href=" " target="_blank" role="button">Shop now!</a>
