--- a/templates/base.html
+++ b/templates/base.html
@@ -4,140 +4,139 @@
 <html lang="en">
 
 <head>
-    {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% endblock %}
+  {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
 
-    {% block corecss %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% block corecss %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
-    {% endblock %}
+  {% endblock %}
 
-    {% block extra_css %}
-    {% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
-    {% block corejs %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-        crossorigin="anonymous"></script>
-    {% endblock %}
+  {% block corejs %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+    crossorigin="anonymous"></script>
+  {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+  {% block extra_js %}
+  {% endblock %}
 
-    <title>Wearable Tech {% block extra_title %}{% endblock %}</title>
+  <title>Wearable Tech {% block extra_title %}{% endblock %}</title>
 </head>
+
 <body>
 
-<div class="header-background">
-<div id="nav" class="sticky-nav">
+  <div class="header-background">
+    <div id="nav" class="sticky-nav">
 
-    <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">                <a href="{% url 'home' %}" class="main-logo-link links">
-                    <h2 class="logo-font">SmartTech.</h2>
-                </a></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      <span> </span>
-      <span> </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> <a href="{% url 'home' %}" class="main-logo-link links">
+              <h2 class="logo-font">SmartTech.</h2>
+            </a></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            <span> </span>
+            <span> </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
 
-        <li class="nav-item ">
-                            <a href="{% url 'account_logout' %}" class="nav-link active" aria-current="page"> Home </a>
-                    </li>
-                           {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                    <li class="nav-item"></li>
-                    <a href="" class="nav-link">Product
-                            Management</a>
-                    {% endif %}
-                    <li class="nav-item">
-                            <a href="{% url 'account_logout' %}" class="nav-link"> Logout </a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                            <a href="{% url 'account_login' %}" class="nav-link"> Login </a>
-                    </li>
-                    <li class="nav-item">
-                            <a href="{% url 'account_signup' %}" class="nav-link"> Register </a>
-                    </li>
+              <li class="nav-item ">
+                <a href="{% url 'account_logout' %}" class="nav-link active" aria-current="page"> Home </a>
+              </li>
+              {% if request.user.is_authenticated %}
+              {% if request.user.is_superuser %}
+              <li class="nav-item"></li>
+              <a href="" class="nav-link">Product
+                Management</a>
+              {% endif %}
+              <li class="nav-item">
+                <a href="{% url 'account_logout' %}" class="nav-link"> Logout </a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a href="{% url 'account_login' %}" class="nav-link"> Login </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'account_signup' %}" class="nav-link"> Register </a>
+              </li>
 
-                    {% endif %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Products</a></li>
-            <li><a class="dropdown-item" href="#">Products</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Products</a></li>
-          </ul>
-        </li>
+              {% endif %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Products</a></li>
+                  <li><a class="dropdown-item" href="#">Products</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Products</a></li>
+                </ul>
+              </li>
 
-                    <li class="nav-item">
-                            <a href="" class="nav-link"> Reviews </a>
-                    </li>
+              <li class="nav-item">
+                <a href="" class="nav-link"> Reviews </a>
+              </li>
 
-                                       <li class="list-inline-item">
-                        <span class="shopping-basket-icon">
-                            <i class="fas fa-shopping-basket"></i>
-                        </span>
-                    </li>
+              <li class="list-inline-item">
+                <span class="shopping-basket-icon">
+                  <i class="fas fa-shopping-basket"></i>
+                </span>
+              </li>
 
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
     </div>
-  </div>
-</nav>
-
-</div>
-
-<h1> Landing Page </h1>
 
     {% block content %}
     {% endblock %}
 
 
-</div>
+  </div>
 
 
+  <header class="container-fluid fixed-top">
 
+    <div class="row">
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
 
-
-
-
-    <header class="container-fluid fixed-top">
-
-        <div class="row">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-
-            </div>
-<!--
+      </div>
+      <!--
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action=" ">
                     <div class="input-group w-80">
@@ -156,60 +155,55 @@
 -->
 
 
-        </div>
+    </div>
 
 
-    </header>
+  </header>
 
-    {% if messages %}
-    <div class="message-container">
+  {% if messages %}
+  <div class="message-container">
+
+  </div>
+  {% endif %}
+
+
+
+  {% block postloadjs %}
+  {% endblock %}
+
+
+  <footer>
+    <div class="row container-fluid">
+      <div class="col-lg-4 col-md-4 text-center">
+        <p class="text-white-uppercase lead">+1 123456789</p>
+      </div>
+
+      <div class="col-lg-4 col-md-4 text-center">
+        <p class="text-white-uppercase lead">FREE HOME DELIVERY ON ORDERS
+          OVER XX</p>
+      </div>
+
+      <div class="col-lg-4 col-md-4 text-center">
+        <p class="text-white-uppercase lead">FREE RETURNS</p>
+      </div>
 
     </div>
-    {% endif %}
 
+    <div class="row social-links">
+      <div class="col  text-center social-links">
+        <a href="" target="_blank"><i class="fab fa-facebook-f"></i>
 
+        </a>
+        <a href="" target="_blank"><i class="fab fa-pinterest"></i>
 
-    {% block postloadjs %}
-    {% endblock %}
+        </a>
 
+        <span class="copyright"> © 2021 Copyright <strong> José Querales</strong> . All rights reserved. </span>
 
-<footer>
-<div class="row container-fluid">
-<div class="col-lg-4 col-md-4 text-center">
-<p class="text-white-uppercase lead">+1 123456789</p> 
-</div>
-
-<div class="col-lg-4 col-md-4 text-center">
-<p class="text-white-uppercase lead">FREE HOME DELIVERY ON ORDERS
-OVER XX</p> 
-</div>
-
-<div class="col-lg-4 col-md-4 text-center">
-<p class="text-white-uppercase lead">FREE RETURNS</p> 
-</div>
-
-</div>
-
-<div class="row social-links">
-    <div class="col  text-center social-links">
-            <a href="" target="_blank"
-              ><i class="fab fa-facebook-f"></i>
-
-</a>
-            <a
-              href=""
-              target="_blank"
-              ><i class="fab fa-pinterest"></i>
-
-</a>
-
-  <span class="copyright"> © 2021 Copyright <strong> José Querales</strong
-          > . All rights reserved. </span>
-
+      </div>
     </div>
-</div>
 
-</footer>
+  </footer>
 </body>
 
 
