--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -3,24 +3,38 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container-fluid products-page">
-        <div class="row container-fluid">
+    <div class="container-fluid">
+        <div class="row">
+
+        </div>
+
+        <div class="row">
             <div class="col">
-            {% for product in products %}
+
+            <div class="row">
+
+            </div>
+
+            <div class="row">
+                {% for product in products %}
+                <div class="col">
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card border-5" style="width: 18rem;">
+                            <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid" alt="{{ product.friendly_name }}">
+                            <div class="card-body">
+                              <p class="card-text">{{ product.friendly_name }}</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
 
 
- 
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}{{product.image.url}}"
-                                alt="{{ product.name }}">
-
-                        
-
-
-            <ul>
-                <li>{{ product.image }}</li>
-            </ul>
-            {% endfor %}
             </div>
         </div>
+    
     </div>
+
+ 
 {% endblock %}
