--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,7 +12,7 @@
             <div class="col">
 
             <div class="row">
-
+                Our products
             </div>
 
             <div class="row">
