--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,6 @@
 
   <div class="header-background">
     <div id="nav" class="sticky-nav">
-
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <a href="{% url 'home' %}" class="main-logo-link links">
@@ -60,14 +59,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
 
-              <li class="nav-item ">
-                <a href="{% url 'account_logout' %}" class="nav-link active" aria-current="page"> Home </a>
-              </li>
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
               <li class="nav-item"></li>
-              <a href="" class="nav-link">Product
-                Management</a>
+              <a href="" class="nav-link">Manage Store</a>
               {% endif %}
               <li class="nav-item">
                 <a href="{% url 'account_logout' %}" class="nav-link"> Logout </a>
@@ -84,15 +79,14 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  Dropdown
+                  Our products
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Products</a></li>
-                  <li><a class="dropdown-item" href="#">Products</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Products</a></li>
+                  <li><a class="dropdown-item" href="{% url 'products' %}">All products</a></li>
+                  <li><a class="dropdown-item" href="#">Fitness</a></li>
+                  <li><a class="dropdown-item" href="#">Medical</a></li>
+                  <li><a class="dropdown-item" href="#">Lifestyle</a></li>
+                  <li><a class="dropdown-item" href="#">Entertainment</a></li>
                 </ul>
               </li>
 
@@ -107,24 +101,16 @@
               </li>
 
             </ul>
-            <form class="d-flex">
+            <form class="d-flex  main-form">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
         </div>
       </nav>
-
     </div>
 
-    <div class="row bg-white">
-      <nav class="navbar navbar-expand-lg navbar-light w-100">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          {% include 'includes/categories_bar.html' %}
-      </nav>
-  </div>
+
 
     {% block content %}
     {% endblock %}
