Add styling to products cards

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,6 +23,7 @@
                             <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid" alt="{{ product.friendly_name }}">
                             <div class="card-body">
                               <p class="card-text">{{ product.friendly_name }}</p>
+                              <p class="font-weight-bold">€{{ product.price }}</p>
                             </div>
                           </div>
                     </div>
