--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -6,17 +6,15 @@
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
 <li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
+  <a title="{{brand.name}}" class="socialaccount_provider {{provider.id}} {{brand.id}}"
+    href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
 </li>
 {% endfor %}
 {% endif %}
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><div class="facebook text-center mr-3">
-      <div class="fa fa-facebook"></div>
-    </div></a>
-
-
+<a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}"
+  href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+  <div class="facebook text-center mr-3">
+    <div class="fa fa-facebook"></div>
+  </div>
+</a>
 {% endfor %}
