Add search product functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,8 +104,8 @@
               </li>
 
             </ul>
-            <form class="d-flex  main-form">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form method="GET" action="{% url 'products' %}" class="d-flex  main-form">
+              <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
