--- a/templates/base.html
+++ b/templates/base.html
@@ -86,10 +86,10 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="{% url 'products' %}">All products</a></li>
-                  <li><a class="dropdown-item" href="#">Fitness</a></li>
-                  <li><a class="dropdown-item" href="#">Medical</a></li>
-                  <li><a class="dropdown-item" href="#">Lifestyle</a></li>
-                  <li><a class="dropdown-item" href="#">Entertainment</a></li>
+                  <li><a class="dropdown-item" href="{% url 'products' %}?category=fitness">Fitness</a></li>
+                  <li><a class="dropdown-item" href="{% url 'products' %}?category=medical">Medical</a></li>
+                  <li><a class="dropdown-item" href="{% url 'products' %}?category=lifestyle">Lifestyle</a></li>
+                  <li><a class="dropdown-item" href="{% url 'products' %}?category=entertainment">Entertainment</a></li>
                 </ul>
               </li>
 
