--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 
-<div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+<div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
   <div class="card-login card0 border-0">
     <div class="row d-flex">
 
