Change hover effects for authentication buttons

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -395,7 +395,7 @@ button:focus {
 }
 
 .btn-blue:hover {
-  background-color: #000;
+  background-color: rgb(74, 127, 196);
   cursor: pointer;
 }
 
